# pdf-binary-editor

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: content.py  documents.py  health.py  objects.py  streams.py  tounicode.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: pdf_facade.py  storage.py
backend/app/utils/: errors.py
backend/tests/: test_health_and_documents.py
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  documents.ts
frontend/src/components/: ObjectEditor.tsx  ObjectTree.tsx  PdfViewer.tsx  UploadPanel.tsx
frontend/src/pages/: WorkspacePage.tsx
